# ChangeLog for dev-lang/python
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/python/ChangeLog,v 1.552 2011/10/26 14:39:16 jer Exp $

  26 Oct 2011; Jeroen Roovers <jer@gentoo.org> python-3.1.4-r3.ebuild:
  Stable for HPPA (bug #387849).

  26 Oct 2011; Jeroen Roovers <jer@gentoo.org> python-2.7.2-r3.ebuild:
  Stable for HPPA (bug #387849).

  24 Oct 2011; Markus Meier <maekke@gentoo.org> python-2.7.2-r3.ebuild:
  arm stable, bug #387849

  23 Oct 2011; Markus Meier <maekke@gentoo.org> python-3.1.4-r3.ebuild:
  x86 stable, bug #387849

  23 Oct 2011; Markus Meier <maekke@gentoo.org> python-2.7.2-r3.ebuild:
  x86 stable, bug #387849

*python-3.2.2 (16 Sep 2011)

  16 Sep 2011; Dirkjan Ochtman <djc@gentoo.org> +python-3.2.2.ebuild:
  Version bump to 3.2.2 (fixes bug 375051).

*python-3.1.4-r3 (16 Sep 2011)
*python-2.7.2-r3 (16 Sep 2011)

  16 Sep 2011; Dirkjan Ochtman <djc@gentoo.org> +files/linux2.patch,
  +python-2.7.2-r3.ebuild, +python-3.1.4-r3.ebuild:
  Set sys.platform to linux2 even on linux3 (bug 375257).

  16 Sep 2011; Dirkjan Ochtman <djc@gentoo.org> -python-2.6.5-r3.ebuild,
  -python-2.7.1-r2.ebuild:
  Remove old versions.

  27 Aug 2011; Jesus Rivero <neurogeek@gentoo.org> python-2.7.2-r2.ebuild,
  python-3.1.3-r1.ebuild, python-3.1.4-r2.ebuild:
  Change to generic license

  23 Aug 2011; Jesus Rivero <neurogeek@gentoo.org> python-3.2-r2.ebuild,
  +files/python-3.2-soname_typo.patch:
  Applied patch from upstream, wrt bug #376303. Fixed License

  07 Aug 2011; Naohiro Aota <naota@gentoo.org> python-2.6.7-r2.ebuild,
  python-2.7.2-r2.ebuild, python-3.1.4-r2.ebuild, python-3.2-r2.ebuild:
  Move more linux3 compat hack into kernel_linux check. Bug #374579

  05 Aug 2011; Naohiro Aota <naota@gentoo.org> python-2.6.7-r2.ebuild,
  python-2.7.2-r2.ebuild, python-3.1.4-r2.ebuild, python-3.2-r2.ebuild:
  Move linux3 compat hack into kernel_linux check. Bug #374579

*python-3.2-r2 (24 Jul 2011)