@@ -2,8 +2,8 @@
 Hash: SHA1
 
 AUX linux2.patch 606 RMD160 0cca6f619a98e6090d01f4a80c2178c323416a47 SHA1 8fc817c8da2f74d3ccc93d84a1bc713ed26c00e2 SHA256 a178120a3022ecb14044c82eff7e828f6d060b6885acacd4a4d8569fde372fd7
-AUX pydoc.conf 330 RMD160 0cd619ec251597e0fcadc05bfd249915e73baa17 SHA1 a56100d45378c554b9822f6ed512a6cb7841ef50 SHA256 a45ebba2de5f2b0e963db4101507203d095c5ff667ae5002c4897a9c87786fa1
-AUX pydoc.init 679 RMD160 79ccfb6179974f4a4f35238c122b9640753e7e43 SHA1 e7bb706ae4ef94d28874677c4f92b82d08d7999a SHA256 8f6c1753a28462fa61d22a927debed7ec3994b3617d728932357e739ede6516f
+AUX pydoc.conf 279 RMD160 85dcc3abd24faf09f3753b5c2299517f9b2ebc6a SHA1 c1faef486a0041c2175bfbc2cf10eccaa574e8c2 SHA256 6437e85d16d34efaf2665b3cabb0707392e6dee3df04989d3fcac63fd22997e8
+AUX pydoc.init 741 RMD160 f6414ad95d7f1258f34afa5c9ff5efaa508a4d9d SHA1 576b5e7ac3c7e36d2e809de5b419d87f1bf23aba SHA256 913be80dea585dd161d2fd439f56a358f148853d8305cb0dbf113c91eb1643f5
 AUX python-2.4.4-test-cross.patch 977 RMD160 8fdcd45dc202993988f7a1c2b3d918068883b99e SHA1 96f25777150ba05765282a43f08da6b6fab3cb73 SHA256 ff2a131776d560d188ec5069e17fea3eb09c26fdd02124ae5ff34d791c9fd9f6
 AUX python-2.5-cross-printf.patch 903 RMD160 8dc0ee148120aaf7667624bdb5574bb6af5d2a00 SHA1 596e05be8cde43e4cdd87c8ed06ebb40828f7cea SHA256 1e91e5123d74d89aa8fc9dc60d98516b785f851e43da9b634ae535130e24e780
 AUX python-2.6-chflags-cross.patch 1716 RMD160 b0ec772a41a24d51f4c7430b19bcc6251cd6be87 SHA1 4745cd53cef503c41c50573ad97f40eb89fd4bcd SHA256 7c36689db47720052069725036983c2fb6959f425e3777aae55976b2788d463f
@@ -30,24 +30,24 @@ DIST python-gentoo-patches-3.1.3-r1.tar.bz2 13730 RMD160 73f922d850e464e589c7a3c
 DIST python-gentoo-patches-3.1.4.tar.bz2 12930 RMD160 5ba5d20e065e6c346848d0c3ed12d65cd6b089be SHA1 b6bb595e03a78a87e3164874a9a12711bee4b9f8 SHA256 9800f3a9989c8aac4c96a7e6411baf96af0c18c041627a330681783a84cb4316
 DIST python-gentoo-patches-3.2.2.tar.bz2 10834 RMD160 f1ca3bec5705b72ee488a37ea71dc7110b4495f1 SHA1 c5daaea3c52a564228c84be741da6cf039b10e19 SHA256 521c1bd7c360fb66788e7c5e191497e014bb104f2ef2272d99a40b764082d7cb
 DIST python-gentoo-patches-3.2.tar.bz2 11826 RMD160 8d450939f3f2f7f5c779b8701097fcf92909c36b SHA1 bdc922a4b94bbb616dbf702e913f74984ad8bda5 SHA256 43799206ed8c81936e3b3e68e8c562334b346652d30383c5b7b93fe9741ad0db
-EBUILD python-2.4.6.ebuild 9314 RMD160 de356959ee97e81f345a595066d6400c7a505461 SHA1 b4c771a3876343087928d8d7a786fe017ea40189 SHA256 f36f2dc2cc7fee7fdc03338c9b1a98134e326cb7149eab030eb7632bf64f80a7
-EBUILD python-2.5.4-r4.ebuild 9664 RMD160 6da8e6907b3c0675a560952cc45372ec56f419fd SHA1 7d43770dbeabbd0a19bc006bd2bf5187bf84ca68 SHA256 fda530914fba4f8bb4010e6b84c3feee3bf9d5654a808e66c7541038c1d972a2
-EBUILD python-2.6.6-r2.ebuild 10546 RMD160 48acd2266821d2475a87e60ceb327910f55c3637 SHA1 31bd4e799a77eee7d27f9ce2bad8f7a2656f8021 SHA256 806e1514641dc2a60ce3e0a959bf126501bb763895873c01f8f51494326b9a6c
+EBUILD python-2.4.6.ebuild 9411 RMD160 53ad3acad20e23e4ab1edab8f400211df27f4772 SHA1 5434007f9e697d0bbfe31e018515f439f4e335d0 SHA256 e054c684ca729c81a117b49db8192ed7a13e23728f24e07a235af71a8f036f35
+EBUILD python-2.5.4-r4.ebuild 9761 RMD160 abd16725421330ef8a312b435d84afe6caa42687 SHA1 78467f3eed7934aa39da1d52e5cb3285203ed3d4 SHA256 1ec9596fef71bdfb9bf31893469bdde13401dbde05cf53071d19d24d4cc25008
+EBUILD python-2.6.6-r2.ebuild 10643 RMD160 05d2ccb6c2190fd8670e4746813661402492d228 SHA1 e9593163f531cb8bcebf65e510671fc762fbaefa SHA256 4c662ef2238e60fe0007566b2ac19869edfef18c2b3b965eb94606ae525ac45c
 EBUILD python-2.6.7-r2.ebuild 11956 RMD160 d0182a06afa3529f2b4cfd11046e81bf9389424c SHA1 099e0b39cdf64dade2bea8e08fdc7d139726abde SHA256 845828a12e4da9a2f987162de8afd7082710fcd9d5cf34adfac41c43293d6e5c
-EBUILD python-2.7.1-r1.ebuild 11120 RMD160 31a17a4a78201fc4991453d4790acb90e0ffe7b2 SHA1 83aeceed035031758547a668ca9543e94d1cc2f5 SHA256 097372f26e0410438e1f511b6c13678ed16ae68b3d0779a1f848630813ca2dcf
+EBUILD python-2.7.1-r1.ebuild 11217 RMD160 c26e835583ee4797dfc0e5ae51932fd8e9303777 SHA1 62830059f58bff5c6e05b53d3e9bf2da733a752c SHA256 316d43bb68f55203cfee8029262e39c594af822f8d8b536fc19a89d5da698769
 EBUILD python-2.7.2-r2.ebuild 12212 RMD160 3b8f961343f3be5819ad6b1c1c0843b30db9ecb7 SHA1 72b99db11f81f9249b9d46229f4d630efd16f107 SHA256 ded0327f1a22a2b9b72cb3c8f954bb4f51ba62ffc04eb6ab5f6a7091dd22008f
 EBUILD python-2.7.2-r3.ebuild 12238 RMD160 1ef8ab5947a568ae91ffdb4ba79b5e7a92309d04 SHA1 0163d5027148236955a3eb054350a1eabe94b366 SHA256 44967b9b48fd0354bd8bfde0831cdce869e0ebb09a6125ae5b8698120f24d065
-EBUILD python-3.1.3-r1.ebuild 9797 RMD160 64b5953182ffe6a47dee1d7e3cb5bcec0d7b13bb SHA1 63a8e3bddfd6d75954658ed728f5cafbf30ebdb1 SHA256 8ef9175479be2368d6dae555a5af651707da8d369baa7eef199cc31596764e83
+EBUILD python-3.1.3-r1.ebuild 9894 RMD160 edd846b9fe5c472e4e99dfa95395708afa71ed13 SHA1 2807dad1ee84148cb2ddd466f047e5610e7c668b SHA256 ff762195045158c7cf2719a7ebfdb8317b4aa7fcf089db52afa9559a36ed01bc
 EBUILD python-3.1.4-r2.ebuild 10705 RMD160 2f5657114d086c4546da85f344b322322bbb80c6 SHA1 c74f64d33d14d7db0fc9bada4107e98a6b73e6a8 SHA256 5e1bdf76fa395d8e96e3df13e2f7abc662afa4443ddbdcba3ba8c452a0312009
 EBUILD python-3.1.4-r3.ebuild 10732 RMD160 3dd9381d0caaee36fb02c291606a6341070e9763 SHA1 41866d6ad27cf811a087c9b68fb4ef64cf216ca2 SHA256 7337ce00ffe4e2ed237c5bea99f7ca8a439505b7f853df9b201ffd3240ade25c
-EBUILD python-3.2-r2.ebuild 10773 RMD160 c9382c6da7738936c57461909a3eb16c74f171a4 SHA1 27d961b9fe9676d68bac0603e63d4f4b6d35ca99 SHA256 f98e550068b32d2526b3d8e487da74e4b2572bf388587f03a3b36942a9657c1d
-EBUILD python-3.2.2.ebuild 10673 RMD160 f4cd0d4f871774d4f529b207000676e5367d88f0 SHA1 aafc517a6d3d6d7e36aeda2630c4c8497773efca SHA256 0157459cd721e33a72b66a67120064ccc356939544e9a3941059dbc48fb965cd
-MISC ChangeLog 98644 RMD160 ae42efa6a9de7318b32d7a3e7a672f7c19fee34c SHA1 d72019f0970dbed5b114013a80d49942c2705e3f SHA256 d2a76ab19fbe969335d56ff671b665578624de6b59703c78978480b6314960f4
+EBUILD python-3.2-r2.ebuild 10869 RMD160 b8b8652f2a485d740391cfb0a78c3b6a841a3dc3 SHA1 4466b924b532bbf43ed392888f3dfe22c678b082 SHA256 f954fdefe6a6bb24ebd76edccf1828629044ff8d04c3795ddb6430a3053e475d
+EBUILD python-3.2.2.ebuild 10775 RMD160 b278081b3823004da061f124c83834807d215bba SHA1 0d173a3fe33b9c48db3edef80e96155a952c01c7 SHA256 05517d90cbfd06d048128214c86d095135e6d7e8d80a07e1c95c5ddffdb81357
+MISC ChangeLog 98984 RMD160 9075bdf25757b681f5911876ee8df8c61ee1769e SHA1 99dbb189414d2b758dbac15e078fa6015ec90aaa SHA256 e5b75aa5b6f5ef1f8b3ed7e4e2eb18cd4b0ba40b1929bb97351f5caeb77b4a83
 MISC metadata.xml 661 RMD160 54831d16b8807086bfabdbb3df9d33336b5d42a0 SHA1 9867c337fe9e6f4e967004fc9409763e0fedf43b SHA256 2c6c3407251f7ccd6501dee49494e539a9544f2fbae99a4373eefdf4e83e8908
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.17 (GNU/Linux)
+Version: GnuPG v2.0.16 (GNU/Linux)
 
-iEYEARECAAYFAk6oG5oACgkQVWmRsqeSphMU/ACdHHFWUNq+AyMsA0JZOA9s21df
-3OUAnjvnlYKfqY1nhDlByvWYJc+2cBDF
-=HYtZ
+iEYEARECAAYFAk6pY20ACgkQdIssYB9vBoO9bQCggL247KwGoKCXcxiplrJvi7ib
+NOkAnR9h4DNQgxdmuI5hStv+VXVUujWW
+=polH
 -----END PGP SIGNATURE-----
