@@ -1,8 +1,7 @@
 # /etc/init.d/pydoc.conf
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/python/files/pydoc.conf,v 1.2 2008/06/30 15:10:28 hawking Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/python/files/pydoc.conf,v 1.3 2011/10/27 13:56:55 neurogeek Exp $
 
-# This file contains the configuration information for pydoc's internal
-# webserver.  The variables should be rather self explanatory :-)
+# This file contains the configuration for pydoc's internal webserver.
 
-# Default port for Python's pydoc server
-PYDOC_PORT=7464
+# Default port for Python's pydoc server.
+@PYDOC_PORT_VARIABLE@="7464"
