@@ -1,6 +1,13 @@
 # ChangeLog for dev-lang/python
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/python/ChangeLog,v 1.552 2011/10/26 14:39:16 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/python/ChangeLog,v 1.553 2011/10/27 13:56:55 neurogeek Exp $
+
+  27 Oct 2011; Jesus Rivero <neurogeek@gentoo.org> python-2.4.6.ebuild,
+  python-2.5.4-r4.ebuild, python-2.6.6-r2.ebuild, python-2.7.1-r1.ebuild,
+  python-3.1.3-r1.ebuild, python-3.2-r2.ebuild, python-3.2.2.ebuild,
+  files/pydoc.conf, files/pydoc.init:
+  Changes to pydoc conf.d and init.d files wrt bug #361867. Patch by
+  Arfrever
 
   26 Oct 2011; Jeroen Roovers <jer@gentoo.org> python-3.1.4-r3.ebuild:
   Stable for HPPA (bug #387849).
